Rewrote Map Gen  & implemented ModSettings for # of resource cells to mine per Asteroid. Asteroids are now circular as a result so they can scale in size properly, hooray math. There should always be land for a shuttle to land as well.

--- a/Languages/English/Keyed/Misc_Gameplay.xml
+++ b/Languages/English/Keyed/Misc_Gameplay.xml
@@ -5,5 +5,6 @@
   <scanFindMtbDays>Maximum time between finding something</scanFindMtbDays>
   <scanFindGuaranteedDays>Maximum days to find something</scanFindGuaranteedDays>
   <canBeUsedUnderRoof>Asteroid Mineral Scanner usable under roof</canBeUsedUnderRoof>
+  <asteroidOreCount>Number of mineable resource tiles per asteroid</asteroidOreCount>
 
 </LanguageData>
